Some changes on the footer and forms

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -23,7 +23,7 @@
   right: -1.5rem; /* Move it to the right, outside the slide */
 }
 
-/@media (max-width: 768px) {
+@media (max-width: 768px) {
   .swiper-button-prev,
   .swiper-button-next {
     width: 16px;
